# rp-lora-test

pc-sender/: Cargo.toml
pc-sender/src/: main.rs
pico-receiver/: Cargo.toml
pico-receiver/.cargo/: config.toml
pico-receiver/src/: main.rs
