[package]
name = "lora-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
libftd2xx = "0.32.2"
rand = "0.8.5"
time = { version = "0.3.17", features = ["local-offset", "formatting", "macros"] }
